--- a/main.css
+++ b/main.css
@@ -1,3 +1,6 @@
+* {
+  font-family: "comic sans ms"
+}
 h1 {
   color: red;
 }
@@ -11,6 +14,9 @@ body {
 }
 td {
   width: 10%;
+}
+h2 {
+  color: yellow;
 }
 .main {
   width: 60%;
@@ -31,4 +37,8 @@ a {
 }
 a:hover {
   color: white;
+}
+.header-image {
+    width: 200px;
+    height: auto;
 }
